--- a/views/pages/inscription.html
+++ b/views/pages/inscription.html
@@ -41,18 +41,19 @@
     <form> 
         <fieldset >
             <label for="nom">Nom</label><br>
-           <input type="nom" id="nom" name="nom" placeholder="entrez votre nom "><br>
+           <input type="nom" id="nom" name="nom" placeholder="entrez votre nom " required><br>
             <label for="e-mail">E-mail</label><br>
            <input type="email" id="e-mail" name="e-mail" placeholder="entrer votre adresse" required ><br>
            <label for="mot passe">Mot de passe</label><br>
-           <input type="password" id="mot passe" name="mot passe" placeholder="xxxx"required minlength="5"><br>
+           <input type="password" id="mot passe" name="mot passe" placeholder="xxxxx" required minlength="5"><br>
            <small style="font-size: 20px;"> votre mot de passe doit comporter au moins 5 caracteres</small><br>
            <label for="confirmer mot passe"> confirmer Mot de passe</label><br>
-           <input type="password" id="confirmer mot passe" name="confirmer votre mot passe" placeholder="xxxx"required minlength="5">
+           <input type="password" id="confirmer mot passe" name="confirmer votre mot passe" placeholder="xxxx" required minlength="5">
            <br><br>
-           <button type="submit" id="inscription"><a href="connexion.html"> s'inscrire </a></button>    
+           <button type="submit" id="inscription">s'inscrire </button>    
         </fieldset>
     </form> 
+    <a href="connexion.html"> retour a la page de connexion </a>
     </div>
     <div id="abonnement">
         <h3> ABONNEZ-VOUS</h3>
@@ -97,6 +98,8 @@
         <h1> CHAUSSURE </h1>
         <h4> Copyright © 2016. Tous droits réservés.</h4>
     </footer>
-    
+    <script src="">
+
+    </script>
 </body>
 </html>
