--- a/views/css/connect.css
+++ b/views/css/connect.css
@@ -7,8 +7,10 @@
     margin-bottom: 80px;
 }
 #inscription h3{
-    background-color: cadetblue;
+    background-color: blue;
     padding-top: 5px;
+    height: 40px;
+    color: white;
     font-size: 25px;
     position: relative;
     top: 5px;
@@ -19,11 +21,16 @@
 #inscription fieldset{
     height:450px;
 }
+#inscription label{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 #inscription input{
     margin-top: 30px;
     width: 500px;
     height: 30px;
     font-size: 20px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 #inscription button{
     background-color: blue;
