--- a/views/css/oublie.css
+++ b/views/css/oublie.css
@@ -31,7 +31,8 @@
 #code label{
     font-size: 30px;
      margin-right: 460px;
-     margin-top: 20px;
+     margin-top: 30px;
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 fieldset{
     margin-top: 200px;
@@ -43,13 +44,14 @@ fieldset{
     height: 40px;
     width: 500px;
     position: relative;
-    bottom:50px;
+    bottom:60px;
     left: 100x;
     text-align: left;
     font-size: 20px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 #code button{
-    margin-right: 210px;
+    margin-right: 50px;
     font-size: 20px;
     height: 40px;
     width: 320px;
