--- a/views/pages/connexion.html
+++ b/views/pages/connexion.html
@@ -44,7 +44,7 @@
                 <p><input type="email" id="e-mail" name="e-mail" placeholder="entrer votre adresse" required ></p>
                 <p><label for="mot passe">Mot de passe</label></p>
                 <input type="password" id="mot passe" name="mot passe" placeholder="xxxxx"required minlength="5"><br>
-                <small style="font-size:20px ;"> votre mot de passe doit comporter au moins 5 caracteres</small><br>
+                <small style="font-size:20px ; color: red;"> votre mot de passe doit comporter au moins 5 caracteres</small><br>
                 <a href="oubliepassword.html"> Mot de passe oublie? </a><br>
                 <button type="submit" id="connexion"> CONNEXION </button>   
              </fieldset>
