--- a/views/pages/inscription.html
+++ b/views/pages/inscription.html
@@ -46,7 +46,7 @@
            <input type="email" id="e-mail" name="e-mail" placeholder="entrer votre adresse" required ><br>
            <label for="mot passe">Mot de passe</label><br>
            <input type="password" id="password1" name="mot passe" placeholder="xxxxx" required minlength="5"><br>
-           <small style="font-size: 20px;"> votre mot de passe doit comporter au moins 5 caracteres</small><br>
+           <small style="font-size: 20px; color: red;"> votre mot de passe doit comporter au moins 5 caracteres</small><br>
            <label for="confirmer mot passe"> confirmer Mot de passe</label><br>
            <input type="password" id="password2" name="confirmer votre mot passe" placeholder="xxxx" required minlength="5">
            <br><br>
