--- a/views/pages/marques.html
+++ b/views/pages/marques.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../css/styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./../css/marques.css">
+    <title>MARQUES</title>
 </head>
 <body>
     <header>
         <div id="entete1">
-        <h1> CHAUSSURE </h1>
+        <h1> SWEET SHOP </h1>
         <h5> faites vous plaisir chez nous</h5><br>
         <form>
             <input type="text" placeholder="rechercher un produit" name="search">
@@ -35,8 +36,31 @@
         </nav>
     </div>
     </header>
+    <div id="slogan">
+        <h3> MARQUES </h3>
+        <P> A la recherche d'une marque particuliere ? vous etes au bon endroit. Nous avons pour vous des marques qui seront satisfaire vos attentes.
+     decouvrer chez nous des marques tendances tel que PUMA , GUESS, REEBOOK et bien d'autres</P>
+      </div>    
+    <div id="marques">
+       <article style="background:url(./../ressources/images/PUMA\ partner-creation-ref-307118-01.webp); background-size: 600px;">
+        <img src="./../ressources/images/puma.png"> 
+        <h2> <a href="puma.html">acceder aux articles PUMA </a> </h2>
+        </article>
+        <article style="background:url(./../ressources/images/REEBOOK\ realflex-train-40.webp); background-size: 600px;">
+            <img src="./../ressources/images/reebook.png">
+            <h2> <a href="reebook.html"> acceder aux articles REEBOOK </a> </h2>
+        </article>
+        <article style="background:url(./../ressources/images/COQ\ SPORTIF\ icons-classic.webp); background-size: 600px;">
+            <img src="./../ressources/images/coq.jpg">
+            <h2> <a href="coqsportif.html"> acceder aux articles LE COQ SPORTIF </a> </h2>
+        </article>
+        <article style="background:url(./../ressources/images/TIMBERLAND\ sprint-trekker2.webp); background-size: 600px;">
+            <img src="./../ressources/images/tim.jpg">
+            <h2> <a href="tim.html"> acceder aux articles TIMBERLAND </a></h2>
+        </article>
+    </div>
     <div id="abonnement">
-        <h2> ABONNEZ-VOUS</h2>
+        <h3> ABONNEZ-VOUS</h3>
         <h4> abonnez vous pour decouvrir nos exclusivite</h4>    
       <form>
         <input type="email" name="abonnes" placeholder="entrer votre adresse email"><br>
@@ -73,11 +97,10 @@
             <img src="./../ressources/images/icone1.png" alt="icone1">
             <small> expedition sous 24h</small>
         </div>
-        </div>
-    <footer>
-        <h1> CHAUSSURE </h1>
-        <h4> Copyright © 2016. Tous droits réservés.</h4>
-    </footer>
-    
+        
+        <footer>
+            <h1> CHAUSSURE </h1>
+            <h4> Copyright © 2016. Tous droits réservés.</h4>
+        </footer>
 </body>
 </html>
