--- a/views/pages/enfants.html
+++ b/views/pages/enfants.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="entete1">
-        <h1> CHAUSSURE</h1>
+        <h1> SWEET SHOP</h1>
         <h5> faites vous plaisir chez nous</h5><br>
         <form>
             <input type="text" placeholder="rechercher un produit" name="search">
@@ -40,7 +40,8 @@
             <h3> ENFANT </h3>
             <P>Prêt à voir vos petits aventuriers et fashionistas se démarquer avec style ? Découvrez notre incroyable sélection de sneakers et baskets pour enfants qui répondent aux besoins de chaque pas, saut et foulée ! Que vous cherchiez 
             des chaussures pour filles ou pour garçons, nous avons tout ce dont vous avez besoin. </P>
-          </div>    
+          </div>  
+            
     <footer>
         <h1> CHAUSSURE </h1>
         <h4> Copyright © 2016. Tous droits réservés.</h4>
