--- a/views/pages/hommes.html
+++ b/views/pages/hommes.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="entete1">
-        <h1> CHAUSSURE </h1>
+        <h1> SWEET SHOP </h1>
         <h5> faites vous plaisir chez nous</h5><br>
         <form>
             <input type="text" placeholder="rechercher un produit" name="search">
