--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="entete1">
-        <h1> CHAUSSURE </h1>
+        <h1>SWEET SHOP</h1>
         <h5> faites vous plaisir chez nous</h5><br>
         <form>
             <input type="text" placeholder="rechercher un produit" name="search">
