--- a/views/pages/inscription.html
+++ b/views/pages/inscription.html
@@ -98,8 +98,8 @@
         <h1> CHAUSSURE </h1>
         <h4> Copyright © 2016. Tous droits réservés.</h4>
     </footer>
-    <script src="./../javascript/inscription.js">
+    <!--<script src="./../javascript/inscription.js">
 
-    </script>
+    </script> -->
 </body>
 </html>
