--- a/views/pages/femmes.html
+++ b/views/pages/femmes.html
@@ -18,7 +18,7 @@
         </form>
         <nav>
             <ul>
-               <li> <a href="inscription.html"> COMPTE</a></li>
+               <li> <a href="connexion.html"> COMPTE</a></li>
                <b class="far fa-user"></b>
                 <li style="font-size: 22px;"> PANIER</li>
             </ul>
