--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -13,7 +13,7 @@
         <div id="entete1">
         <h1>SWEET SHOP</h1>
         <h5> faites vous plaisir chez nous</h5><br>
-        <form>
+        <form method="post" action="./../../database/getshoes.php">
             <input type="text" placeholder="rechercher un produit" name="search">
             <button type="submit">rechercher</button>
         </form>
