--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -126,15 +126,15 @@
         </div>
         <div id="info">
         <div id="site">
-           <h3>CHAUSSURE</h3>
-           <p> chaussure est un site de vente de chaussure en ligne qui mets a votre disposition des articles de differentes categories a des prix defiant toutes concurences.Que vous soyez à la recherche de baskets tendance pour compléter votre tenue streetwear, de bottines punk ou boho, ou encore de chaussures de ville pour un style glamour ou tout simplement pour les porter avec toutes vos tenues, vous allez trouver chaussure à votre pied. Vos créateurs préférés sont certainement sur CHAUSSURE, nous proposons de nombreuses marques de la basket à la claquette sans oublier les bottes et chaussures de skate.<br>
-         Afin d'assurer une bonne cohesion avec ces clients , CHAUSSURES definit les contraintes suivantes:<br>
+           <h3> SWEET SHOP</h3>
+           <p> SWEET SHOP est un site de vente de chaussure en ligne qui mets a votre disposition des articles de differentes categories a des prix defiant toutes concurences.Que vous soyez à la recherche de baskets tendance pour compléter votre tenue streetwear, de bottines punk ou boho, ou encore de chaussures de ville pour un style glamour ou tout simplement pour les porter avec toutes vos tenues, vous allez trouver chaussure à votre pied. Vos créateurs préférés sont certainement sur CHAUSSURE, nous proposons de nombreuses marques de la basket à la claquette sans oublier les bottes et chaussures de skate.<br>
+         Afin d'assurer une bonne cohesion avec ces clients ,  SWEET SHOP definit les contraintes suivantes:<br>
         - un remboursement sous moins de 30jours en cas d'insatisfaction<br>
         -une livraison gratuite si le prix de votre achat est superieure a 10 000fcfa<br>
         - un mode de paiement scurise<br>
         -une livraison  garantie en 24h<br>
         De plus un SERVICE CLIENT de qualite est mis a votre disposition pour tout vos besoins<br>
-       ENTRER A CHAUSSURE PAR CURIOSITE ET VOUS RESTERER PAR PLAISIR </p>
+       ENTRER A SWEET SHOP PAR CURIOSITE ET VOUS Y RESTERER PAR PLAISIR </p>
         </div>
         <div id="contact">
             <h3> COMMENT NOUS CONTACTER</h3>
@@ -148,7 +148,7 @@
         </div>
     </div>
     <footer>
-        <h1> CHAUSSURE </h1>
+        <h1>  SWEET SHOP</h1>
         <h4> Copyright © 2016. Tous droits réservés.</h4>
     </footer>
 </body>
